[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.13.2"
requests = "^2.32.3"
numpy = "^2.2.3"
pandas = "^2.2.3"
flask = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line-length = 119
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
